--- a/assets/style.css
+++ b/assets/style.css
@@ -25,6 +25,28 @@
   background-color: #26b979;
 }
 
+form{
+  width: 50%;
+  margin: auto;
+  background-color: #b7ffe0;
+  padding: 24px;
+  border-radius: 16px;
+
+  display: flex;
+  flex-direction: column; 
+  gap: 16px;
+}
+
+form .column{
+display: flex;
+flex-direction: column;
+gap: 8px;
+}
+
+/* form div .select .checkbox{
+display: flex;
+
+} */
 
 .table{
     border-collapse: collapse;
@@ -34,6 +56,9 @@
 .table th, td {
     padding: 8px;
     border-bottom: 1px solid #dfdfdf;
+}
+.table th{
+   background-color: #dfdfdf;
 }
 .table tr:hover {
     background-color: #e7e7e7;
